--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.conditionalrangefillupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.conditionalrangefillupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFillUpdateData:interface'
-    summary: '<span data-ttu-id="e8af1-101">一个用于更新 ConditionalRangeFill 对象上的数据的接口，可用于`conditionalRangeFill.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="e8af1-101">An interface for updating data on the ConditionalRangeFill object, for use in `conditionalRangeFill.set({ ... })`</span></span><!-- --><span data-ttu-id="e8af1-102">.</span><span class="sxs-lookup"><span data-stu-id="e8af1-102"></span></span>'
+    summary: '一个用于更新 ConditionalRangeFill 对象上的数据的接口，可用于`conditionalRangeFill.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ConditionalRangeFillUpdateData
     fullName: Excel.Interfaces.ConditionalRangeFillUpdateData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.ConditionalRangeFillUpdateData#color:member'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFillUpdateData#color:member'
     summary: |-
-      <span data-ttu-id="e8af1-103">代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的填充颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="e8af1-103">HTML color code representing the color of the fill, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的填充颜色的 HTML 颜色代码。
 
-      <span data-ttu-id="e8af1-104">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e8af1-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
