--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.formatprotection.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.formatprotection.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.FormatProtection:class'
     summary: |-
-      <span data-ttu-id="11efb-101">表示对范围对象的格式保护。</span><span class="sxs-lookup"><span data-stu-id="11efb-101">Represents the format protection of a range object.</span></span>
+      表示对范围对象的格式保护。
 
-      <span data-ttu-id="11efb-102">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="11efb-102">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.FormatProtection
     fullName: Excel.FormatProtection
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.FormatProtection#context:member'
@@ -24,7 +24,7 @@ items:
       - 'excel!Excel.FormatProtection#set:member(2)'
       - 'excel!Excel.FormatProtection#toJSON:member(1)'
   - uid: 'excel!Excel.FormatProtection#context:member'
-    summary: <span data-ttu-id="11efb-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="11efb-103">The request context associated with the object.</span></span> <span data-ttu-id="11efb-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="11efb-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -37,9 +37,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.FormatProtection#formulaHidden:member'
     summary: |-
-      <span data-ttu-id="11efb-p102">表示 Excel 是否隐藏区域中的单元格公式。指示整个区域不具有统一公式隐藏设置的空值。</span><span class="sxs-lookup"><span data-stu-id="11efb-p102">Indicates if Excel hides the formula for the cells in the range. A null value indicates that the entire range doesn't have uniform formula hidden setting.</span></span>
+      指定 Excel 是否隐藏区域中单元格的公式。 指示整个区域不具有统一公式隐藏设置的空值。
 
-      <span data-ttu-id="11efb-107">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="11efb-107">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulaHidden
     fullName: formulaHidden
     langs:
@@ -51,7 +51,7 @@ items:
         type:
           - boolean
   - uid: 'excel!Excel.FormatProtection#load:member(1)'
-    summary: <span data-ttu-id="11efb-108">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="11efb-108">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="11efb-109">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="11efb-109">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -65,11 +65,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="11efb-110">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="11efb-110">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.FormatProtectionLoadOptions:interface'
   - uid: 'excel!Excel.FormatProtection#load:member(2)'
-    summary: <span data-ttu-id="11efb-111">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="11efb-111">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="11efb-112">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="11efb-112">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -83,11 +83,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="11efb-113">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="11efb-113">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.FormatProtection#load:member(3)'
-    summary: <span data-ttu-id="11efb-114">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="11efb-114">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="11efb-115">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="11efb-115">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -105,7 +105,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="11efb-116">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="11efb-116">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -114,9 +114,9 @@ items:
                       }
   - uid: 'excel!Excel.FormatProtection#locked:member'
     summary: |-
-      <span data-ttu-id="11efb-117">指示 Excel 是否将对象中的单元格锁定。</span><span class="sxs-lookup"><span data-stu-id="11efb-117">Indicates if Excel locks the cells in the object.</span></span> <span data-ttu-id="11efb-118">指示整个区域不具有统一锁定设置的空值。</span><span class="sxs-lookup"><span data-stu-id="11efb-118">A null value indicates that the entire range doesn't have uniform lock setting.</span></span>
+      指定 Excel 是否锁定对象中的单元格。 指示整个区域不具有统一锁定设置的空值。
 
-      <span data-ttu-id="11efb-119">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="11efb-119">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: locked
     fullName: locked
     langs:
@@ -128,9 +128,9 @@ items:
         type:
           - boolean
   - uid: 'excel!Excel.FormatProtection#set:member(1)'
-    summary: '<span data-ttu-id="11efb-120">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="11efb-120">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="11efb-121">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="11efb-121">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="11efb-122">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="11efb-122">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.FormatProtection): void`
     name: 'set(properties, options)'
@@ -146,15 +146,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="11efb-123">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="11efb-123">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.FormatProtectionUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="11efb-124">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="11efb-124">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.FormatProtection#set:member(2)'
-    summary: '<span data-ttu-id="11efb-125">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="11efb-125">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -172,7 +172,7 @@ items:
           type:
             - 'excel!Excel.FormatProtection:class'
   - uid: 'excel!Excel.FormatProtection#toJSON:member(1)'
-    summary: '<span data-ttu-id="11efb-126">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="11efb-126">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="11efb-127">.</span><span class="sxs-lookup"><span data-stu-id="11efb-127"></span></span> <span data-ttu-id="11efb-128">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="11efb-128"></span></span><!-- --><span data-ttu-id="11efb-129">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 FormatProtection 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.FormatProtectionData`</span><span class="sxs-lookup"><span data-stu-id="11efb-129">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.FormatProtection object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.FormatProtectionData`</span></span><!-- --><span data-ttu-id="11efb-130">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="11efb-130">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 FormatProtection 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.FormatProtectionData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -185,7 +185,7 @@ items:
           - 'excel!Excel.Interfaces.FormatProtectionData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -195,7 +195,7 @@ references:
     name: Excel.Interfaces.FormatProtectionLoadOptions
   - uid: 'excel!Excel.Interfaces.FormatProtectionUpdateData:interface'
     name: Interfaces.FormatProtectionUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.FormatProtectionData:interface'
     name: Excel.Interfaces.FormatProtectionData
