--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.sortfield.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.sortfield.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.SortField:interface'
     summary: |-
-      <span data-ttu-id="421b1-101">表示排序操作中的条件。</span><span class="sxs-lookup"><span data-stu-id="421b1-101">Represents a condition in a sorting operation.</span></span>
+      表示排序操作中的条件。
 
-      <span data-ttu-id="421b1-102">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="421b1-102">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.SortField
     fullName: Excel.SortField
     langs:
@@ -20,9 +20,9 @@ items:
       - 'excel!Excel.SortField#sortOn:member'
   - uid: 'excel!Excel.SortField#ascending:member'
     summary: |-
-      <span data-ttu-id="421b1-103">表示是否执行升序排序。</span><span class="sxs-lookup"><span data-stu-id="421b1-103">Represents whether the sorting is done in an ascending fashion.</span></span>
+      指定是否以升序方式进行排序。
 
-      <span data-ttu-id="421b1-104">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="421b1-104">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: ascending
     fullName: ascending
     langs:
@@ -35,9 +35,9 @@ items:
           - boolean
   - uid: 'excel!Excel.SortField#color:member'
     summary: |-
-      <span data-ttu-id="421b1-105">表示按字体或单元格颜色进行排序时，条件的目标颜色。</span><span class="sxs-lookup"><span data-stu-id="421b1-105">Represents the color that is the target of the condition if the sorting is on font or cell color.</span></span>
+      指定在对字体或单元格颜色进行排序时，作为条件目标的颜色。
 
-      <span data-ttu-id="421b1-106">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="421b1-106">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -50,9 +50,9 @@ items:
           - string
   - uid: 'excel!Excel.SortField#dataOption:member'
     summary: |-
-      <span data-ttu-id="421b1-107">表示此字段的其他排序选项。</span><span class="sxs-lookup"><span data-stu-id="421b1-107">Represents additional sorting options for this field.</span></span>
+      表示此字段的其他排序选项。
 
-      <span data-ttu-id="421b1-108">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="421b1-108">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dataOption
     fullName: dataOption
     langs:
@@ -65,9 +65,9 @@ items:
           - 'excel!Excel.SortField#dataOption~0:complex'
   - uid: 'excel!Excel.SortField#icon:member'
     summary: |-
-      <span data-ttu-id="421b1-109">表示对单元格图标进行排序时，条件的目标图标。</span><span class="sxs-lookup"><span data-stu-id="421b1-109">Represents the icon that is the target of the condition if the sorting is on the cell's icon.</span></span>
+      指定当排序在单元格的图标上时作为条件目标的图标。
 
-      <span data-ttu-id="421b1-110">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="421b1-110">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: icon
     fullName: icon
     langs:
@@ -80,9 +80,9 @@ items:
           - 'excel!Excel.Icon:interface'
   - uid: 'excel!Excel.SortField#key:member'
     summary: |-
-      <span data-ttu-id="421b1-p101">表示条件所在的列（或行，具体取决于排序方向）。表示与第一列（或行）的偏移量。</span><span class="sxs-lookup"><span data-stu-id="421b1-p101">Represents the column (or row, depending on the sort orientation) that the condition is on. Represented as an offset from the first column (or row).</span></span>
+      指定条件所在的列（或行，具体取决于排序方向）。 表示与第一列（或行）的偏移量。
 
-      <span data-ttu-id="421b1-113">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="421b1-113">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: key
     fullName: key
     langs:
@@ -95,9 +95,9 @@ items:
           - number
   - uid: 'excel!Excel.SortField#sortOn:member'
     summary: |-
-      <span data-ttu-id="421b1-114">表示此条件的排序类型。</span><span class="sxs-lookup"><span data-stu-id="421b1-114">Represents the type of sorting of this condition.</span></span>
+      指定此条件的排序类型。
 
-      <span data-ttu-id="421b1-115">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="421b1-115">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: sortOn
     fullName: sortOn
     langs:
