--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.conditionaldatabarnegativeformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.conditionaldatabarnegativeformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatData:interface'
-    summary: <span data-ttu-id="4db7f-101">描述通过调用返回的数据的接口`conditionalDataBarNegativeFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="4db7f-101">An interface describing the data returned by calling `conditionalDataBarNegativeFormat.toJSON()`</span></span><!-- --><span data-ttu-id="4db7f-102">.</span><span class="sxs-lookup"><span data-stu-id="4db7f-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`conditionalDataBarNegativeFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.ConditionalDataBarNegativeFormatData
     fullName: Excel.Interfaces.ConditionalDataBarNegativeFormatData
     langs:
@@ -15,9 +15,9 @@ items:
       - 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatData#matchPositiveFillColor:member'
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatData#borderColor:member'
     summary: |-
-      <span data-ttu-id="4db7f-103">代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="4db7f-103">HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span> <span data-ttu-id="4db7f-104">如果不存在或设置了边框，则为 "空字符串"。</span><span class="sxs-lookup"><span data-stu-id="4db7f-104">"Empty String" if no border is present or set.</span></span>
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线颜色的 HTML 颜色代码。 如果不存在或设置了边框，则为 "空字符串"。
 
-      <span data-ttu-id="4db7f-105">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4db7f-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: borderColor
     fullName: borderColor
     langs:
@@ -30,9 +30,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatData#fillColor:member'
     summary: |-
-      <span data-ttu-id="4db7f-106">代表\#RRGGBB 的填充颜色的 HTML 颜色代码（例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）。</span><span class="sxs-lookup"><span data-stu-id="4db7f-106">HTML color code representing the fill color, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+      代表表单\#RRGGBB 的填充颜色的 HTML 颜色代码（例如，"FFA500"）或命名的 HTML 颜色（例如，"橙色"）。
 
-      <span data-ttu-id="4db7f-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4db7f-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fillColor
     fullName: fillColor
     langs:
@@ -45,9 +45,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatData#matchPositiveBorderColor:member'
     summary: |-
-      <span data-ttu-id="4db7f-108">该布尔值表示负 DataBar 是否与正 DataBar 具有相同边框颜色。</span><span class="sxs-lookup"><span data-stu-id="4db7f-108">Boolean representation of whether or not the negative DataBar has the same border color as the positive DataBar.</span></span>
+      指定负 DataBar 的边框颜色是否与正 DataBar 相同。
 
-      <span data-ttu-id="4db7f-109">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4db7f-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: matchPositiveBorderColor
     fullName: matchPositiveBorderColor
     langs:
@@ -60,9 +60,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatData#matchPositiveFillColor:member'
     summary: |-
-      <span data-ttu-id="4db7f-110">该布尔值表示负 DataBar 是否与正 DataBar 具有相同填充颜色。</span><span class="sxs-lookup"><span data-stu-id="4db7f-110">Boolean representation of whether or not the negative DataBar has the same fill color as the positive DataBar.</span></span>
+      指定负 DataBar 的填充颜色是否与正 DataBar 相同。
 
-      <span data-ttu-id="4db7f-111">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4db7f-111">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: matchPositiveFillColor
     fullName: matchPositiveFillColor
     langs:
