--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.conditionalrangefill.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.conditionalrangefill.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.ConditionalRangeFill:class'
     summary: |-
-      <span data-ttu-id="2c15c-101">代表条件 range 对象的背景。</span><span class="sxs-lookup"><span data-stu-id="2c15c-101">Represents the background of a conditional range object.</span></span>
+      代表条件 range 对象的背景。
 
-      <span data-ttu-id="2c15c-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2c15c-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ConditionalRangeFill
     fullName: Excel.ConditionalRangeFill
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ConditionalRangeFill#clear:member(1)'
@@ -25,9 +25,9 @@ items:
       - 'excel!Excel.ConditionalRangeFill#toJSON:member(1)'
   - uid: 'excel!Excel.ConditionalRangeFill#clear:member(1)'
     summary: |-
-      <span data-ttu-id="2c15c-103">重置填充。</span><span class="sxs-lookup"><span data-stu-id="2c15c-103">Resets the fill.</span></span>
+      重置填充。
 
-      <span data-ttu-id="2c15c-104">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2c15c-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: clear()
     fullName: clear()
     langs:
@@ -41,9 +41,9 @@ items:
         description: ''
   - uid: 'excel!Excel.ConditionalRangeFill#color:member'
     summary: |-
-      <span data-ttu-id="2c15c-105">代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的填充颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="2c15c-105">HTML color code representing the color of the fill, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的填充颜色的 HTML 颜色代码。
 
-      <span data-ttu-id="2c15c-106">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2c15c-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -55,7 +55,7 @@ items:
         type:
           - string
   - uid: 'excel!Excel.ConditionalRangeFill#context:member'
-    summary: <span data-ttu-id="2c15c-107">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="2c15c-107">The request context associated with the object.</span></span> <span data-ttu-id="2c15c-108">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="2c15c-108">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -67,7 +67,7 @@ items:
         type:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ConditionalRangeFill#load:member(1)'
-    summary: <span data-ttu-id="2c15c-109">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="2c15c-109">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="2c15c-110">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="2c15c-110">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -81,11 +81,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="2c15c-111">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="2c15c-111">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.ConditionalRangeFillLoadOptions:interface'
   - uid: 'excel!Excel.ConditionalRangeFill#load:member(2)'
-    summary: <span data-ttu-id="2c15c-112">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="2c15c-112">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="2c15c-113">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="2c15c-113">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -99,11 +99,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="2c15c-114">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="2c15c-114">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ConditionalRangeFill#load:member(3)'
-    summary: <span data-ttu-id="2c15c-115">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="2c15c-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="2c15c-116">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="2c15c-116">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -121,7 +121,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="2c15c-117">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="2c15c-117">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -129,9 +129,9 @@ items:
                           expand?: string;
                       }
   - uid: 'excel!Excel.ConditionalRangeFill#set:member(1)'
-    summary: '<span data-ttu-id="2c15c-118">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="2c15c-118">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="2c15c-119">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="2c15c-119">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="2c15c-120">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="2c15c-120">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ConditionalRangeFill): void`
     name: 'set(properties, options)'
@@ -147,15 +147,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="2c15c-121">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="2c15c-121">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.ConditionalRangeFillUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="2c15c-122">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="2c15c-122">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ConditionalRangeFill#set:member(2)'
-    summary: '<span data-ttu-id="2c15c-123">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="2c15c-123">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -173,7 +173,7 @@ items:
           type:
             - 'excel!Excel.ConditionalRangeFill:class'
   - uid: 'excel!Excel.ConditionalRangeFill#toJSON:member(1)'
-    summary: '<span data-ttu-id="2c15c-124">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="2c15c-124">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="2c15c-125">.</span><span class="sxs-lookup"><span data-stu-id="2c15c-125"></span></span> <span data-ttu-id="2c15c-126">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="2c15c-126"></span></span><!-- --><span data-ttu-id="2c15c-127">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ConditionalRangeFill 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ConditionalRangeFillData`</span><span class="sxs-lookup"><span data-stu-id="2c15c-127">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ConditionalRangeFill object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ConditionalRangeFillData`</span></span><!-- --><span data-ttu-id="2c15c-128">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="2c15c-128">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ConditionalRangeFill 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ConditionalRangeFillData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -186,7 +186,7 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeFillData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -196,7 +196,7 @@ references:
     name: Excel.Interfaces.ConditionalRangeFillLoadOptions
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFillUpdateData:interface'
     name: Interfaces.ConditionalRangeFillUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFillData:interface'
     name: Excel.Interfaces.ConditionalRangeFillData
