commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.rangecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.rangecollectionloadoptions.yml
@@ -57,7 +57,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#address:member'
     summary: |-
-      对于集合中的每一项：代表 A1 样式中的区域引用。 Address 值将包含工作表引用（例如，"Sheet1！A1： B4 "）。 只读。
+      对于集合中的每一项：指定 A1 样式中的区域引用。 Address 值将包含工作表引用（例如，"Sheet1！A1： B4 "）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: address
@@ -72,7 +72,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#addressLocal:member'
     summary: |-
-      对于集合中的每一项：代表指定区域的区域引用（以用户语言表示）。 只读。
+      对于集合中的每一项：以用户语言指定区域的区域引用。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: addressLocal
@@ -87,7 +87,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#cellCount:member'
     summary: |-
-      对于集合中的每个项目：区域中的单元格数量。 如果单元格数超过 2^31-1 (2,147,483,647)，此 API 返回 -1。 只读。
+      对于集合中的每一项：指定区域中的单元格的数目。 如果单元格数超过 2^31-1 (2,147,483,647)，此 API 返回 -1。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: cellCount
@@ -102,7 +102,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#columnCount:member'
     summary: |-
-      对于集合中的每一项：表示区域中的总列数。 只读。
+      对于集合中的每一项：指定区域中的总列数。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnCount
@@ -132,7 +132,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#columnIndex:member'
     summary: |-
-      对于集合中的每一项：表示区域中的第一个单元格的列号。 从零开始编制索引。 只读。
+      对于集合中的每一项：指定区域中的第一个单元格的列号。 从零开始编制索引。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnIndex
@@ -238,7 +238,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#height:member'
     summary: |-
-      对于集合中的每一项：返回以磅为单位的距离，100以磅为单位，从区域的上边缘到区域的下边缘之间的距离（以磅为单位）。 只读。
+      对于集合中的每一项：返回以磅为单位的距离，100以磅为单位，从区域的上边缘到区域的下边缘之间的距离（以磅为单位）。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -253,7 +253,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#hidden:member'
     summary: |-
-      对于集合中的每一项：表示是否隐藏当前区域中的所有单元格。 只读。
+      对于集合中的每一项：表示是否隐藏当前区域中的所有单元格。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: hidden
@@ -283,7 +283,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#isEntireColumn:member'
     summary: |-
-      对于集合中的每一项：表示当前区域是否为整列。 只读。
+      对于集合中的每一项：表示当前区域是否为整列。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isEntireColumn
@@ -298,7 +298,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#isEntireRow:member'
     summary: |-
-      对于集合中的每一项：表示当前区域是否为整行。 只读。
+      对于集合中的每一项：表示当前区域是否为整行。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isEntireRow
@@ -313,7 +313,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#left:member'
     summary: |-
-      对于集合中的每个项目：返回以磅为单位的距离，以磅为单位，从工作表左边缘到区域左边缘的比例为100%。 只读。
+      对于集合中的每个项目：返回以磅为单位的距离，以磅为单位，从工作表左边缘到区域左边缘的比例为100%。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
@@ -328,7 +328,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#linkedDataTypeState:member'
     summary: |-
-      对于集合中的每一项：表示每个单元格的数据类型状态。 只读。
+      对于集合中的每一项：表示每个单元格的数据类型状态。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: linkedDataTypeState
@@ -358,7 +358,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#numberFormatCategories:member'
     summary: |-
-      对于集合中的每一项：表示每个单元格的编号格式的类别。 只读。
+      对于集合中的每一项：表示每个单元格的编号格式的类别。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -389,7 +389,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#rowCount:member'
     summary: |-
-      对于集合中的每一项：返回范围中的总行数。 只读。
+      对于集合中的每一项：返回范围中的总行数。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowCount
@@ -419,7 +419,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#rowIndex:member'
     summary: |-
-      对于集合中的每一项：返回区域中第一个单元格的行号。 从零开始编制索引。 只读。
+      对于集合中的每一项：返回区域中第一个单元格的行号。 从零开始编制索引。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowIndex
@@ -465,7 +465,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#text:member'
     summary: |-
-      对于集合中的每一项：指定区域的文本值。 文本值与单元格宽度无关。 Excel \# UI 中发生的符号替换不会影响 API 返回的文本值。 只读。
+      对于集合中的每一项：指定区域的文本值。 文本值与单元格宽度无关。 Excel \# UI 中发生的符号替换不会影响 API 返回的文本值。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
@@ -480,7 +480,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#top:member'
     summary: |-
-      对于集合中的每个项目：返回以磅为单位的距离，以磅100为单位，从工作表的上边缘到区域的上边缘之间的距离（以磅为单位）。 只读。
+      对于集合中的每个项目：返回以磅为单位的距离，以磅100为单位，从工作表的上边缘到区域的上边缘之间的距离（以磅为单位）。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
@@ -510,7 +510,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#valueTypes:member'
     summary: |-
-      对于集合中的每一项：代表每个单元格的数据类型。 只读。
+      对于集合中的每一项：指定每个单元格中的数据的类型。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: valueTypes
@@ -525,7 +525,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#width:member'
     summary: |-
-      对于集合中的每个项目：返回以磅为单位的距离，以磅为单位，从区域的左边缘到该范围的右边缘之间的100% 缩放。 只读。
+      对于集合中的每个项目：返回以磅为单位的距离，以磅为单位，从区域的左边缘到该范围的右边缘之间的100% 缩放。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
