--- a/docs/docs-ref-autogen/excel_1_11/excel/excel.interfaces.charterrorbarsformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_11/excel/excel.interfaces.charterrorbarsformatdata.yml
@@ -1,20 +1,20 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: 'excel!Excel.Interfaces.ChartGridlinesFormatData:interface'
-    summary: 描述通过调用返回的数据的接口`chartGridlinesFormat.toJSON()`<!-- -->.
-    name: Excel.Interfaces.ChartGridlinesFormatData
-    fullName: Excel.Interfaces.ChartGridlinesFormatData
+  - uid: 'excel!Excel.Interfaces.ChartErrorBarsFormatData:interface'
+    summary: 描述通过调用返回的数据的接口`chartErrorBarsFormat.toJSON()`<!-- -->.
+    name: Excel.Interfaces.ChartErrorBarsFormatData
+    fullName: Excel.Interfaces.ChartErrorBarsFormatData
     langs:
       - typeScript
     type: interface
     package: excel!
     children:
-      - 'excel!Excel.Interfaces.ChartGridlinesFormatData#line:member'
-  - uid: 'excel!Excel.Interfaces.ChartGridlinesFormatData#line:member'
+      - 'excel!Excel.Interfaces.ChartErrorBarsFormatData#line:member'
+  - uid: 'excel!Excel.Interfaces.ChartErrorBarsFormatData#line:member'
     summary: |-
       表示图表线条格式。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: line
     fullName: line
     langs:
