--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.chartaxisformat.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.chartaxisformat.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartAxisFormat#context:member'
@@ -38,7 +38,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartAxisFormat#fill:member'
     summary: |-
-      表示图表填充格式。 只读。
+      指定图表填充格式。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
@@ -53,7 +53,7 @@ items:
           - 'excel!Excel.ChartFill:class'
   - uid: 'excel!Excel.ChartAxisFormat#font:member'
     summary: |-
-      表示图表坐标轴元素的字体属性（字体名称、字体大小、颜色等）。 只读。
+      指定图表轴元素的字体属性（字体名称、字体大小、颜色等）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
@@ -68,7 +68,7 @@ items:
           - 'excel!Excel.ChartFont:class'
   - uid: 'excel!Excel.ChartAxisFormat#line:member'
     summary: |-
-      表示图表线条格式。 只读。
+      指定图表线格式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: line
@@ -168,7 +168,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartAxisFormat#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -201,7 +201,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAxisFormatData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -217,7 +217,7 @@ references:
     name: Excel.Interfaces.ChartAxisFormatLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartAxisFormatUpdateData:interface'
     name: Interfaces.ChartAxisFormatUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartAxisFormatData:interface'
     name: Excel.Interfaces.ChartAxisFormatData
