--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartdata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartdata.yml
@@ -33,7 +33,7 @@ items:
       - 'excel!Excel.Interfaces.ChartData#width:member'
   - uid: 'excel!Excel.Interfaces.ChartData#axes:member'
     summary: |-
-      表示图表坐标轴。 只读。
+      表示图表坐标轴。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axes
@@ -48,7 +48,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAxesData:interface'
   - uid: 'excel!Excel.Interfaces.ChartData#categoryLabelLevel:member'
     summary: |-
-      返回或设置 ChartCategoryLabelLevel 枚举常量，该常量代表分类标签源自位置的级别。 读/写。
+      指定一个 ChartCategoryLabelLevel 枚举常量，该常量引用分类标签的来源级别。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: categoryLabelLevel
@@ -63,7 +63,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartData#chartType:member'
     summary: |-
-      表示图表的类型。 有关详细信息，请参阅 ChartType。
+      指定图表的类型。 有关详细信息，请参阅 ChartType。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: chartType
@@ -78,7 +78,7 @@ items:
           - 'excel!Excel.Interfaces.ChartData#chartType~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartData#dataLabels:member'
     summary: |-
-      表示图表上的数据标签。 只读。
+      表示图表上的数据标签。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dataLabels
@@ -93,7 +93,7 @@ items:
           - 'excel!Excel.Interfaces.ChartDataLabelsData:interface'
   - uid: 'excel!Excel.Interfaces.ChartData#displayBlanksAs:member'
     summary: |-
-      返回或设置图表上的空白单元格的绘制方式。 读/写。
+      指定在图表上绘制空白单元格的方式。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: displayBlanksAs
@@ -108,7 +108,7 @@ items:
           - 'excel!Excel.Interfaces.ChartData#displayBlanksAs~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartData#format:member'
     summary: |-
-      封装图表区域的格式属性。 只读。
+      封装图表区域的格式属性。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -123,7 +123,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAreaFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ChartData#height:member'
     summary: |-
-      表示 chart 对象的高度，以磅值表示。
+      指定 chart 对象的高度（以磅为单位）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -138,7 +138,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartData#id:member'
     summary: |-
-      图表的唯一 ID。 只读。
+      图表的唯一 ID。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -168,7 +168,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartData#legend:member'
     summary: |-
-      表示图表的图例。 只读。
+      表示图表的图例。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: legend
@@ -183,7 +183,7 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendData:interface'
   - uid: 'excel!Excel.Interfaces.ChartData#name:member'
     summary: |-
-      表示 chart 对象的名称。
+      指定 chart 对象的名称。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -213,7 +213,7 @@ items:
           - 'excel!Excel.Interfaces.ChartPlotAreaData:interface'
   - uid: 'excel!Excel.Interfaces.ChartData#plotBy:member'
     summary: |-
-      返回或设置图表上的列或行用作数据系列的方式。 读/写。
+      指定列或行在图表上用作数据系列的方式。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: plotBy
@@ -228,7 +228,7 @@ items:
           - 'excel!Excel.Interfaces.ChartData#plotBy~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartData#plotVisibleOnly:member'
     summary: |-
-      如果仅绘制可见单元格，则为 True。 如果绘制可见单元格和隐藏单元格，则为 False。 读/写。
+      如果仅绘制可见单元格，则为 True。 如果绘制可见单元格和隐藏单元格，则为 False。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: plotVisibleOnly
@@ -243,7 +243,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartData#series:member'
     summary: |-
-      表示单个系列或图表中的系列集合。 只读。
+      表示单个系列或图表中的系列集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: series
@@ -258,7 +258,7 @@ items:
           - 'excel!Excel.Interfaces.ChartData#series~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartData#seriesNameLevel:member'
     summary: |-
-      返回或设置 ChartSeriesNameLevel 枚举常量，该常量代表系列名称源自位置的级别。 读/写。
+      指定一个 ChartSeriesNameLevel 枚举常量，该常量引用系列名称的来源级别。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: seriesNameLevel
@@ -273,7 +273,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartData#showAllFieldButtons:member'
     summary: |-
-      表示是否在数据透视图上显示所有字段按钮。
+      指定是否在数据透视图上显示所有字段按钮。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showAllFieldButtons
@@ -288,7 +288,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartData#showDataLabelsOverMaximum:member'
     summary: |-
-      表示当值大于数值轴上的最大值时是否显示数据标签。 如果数值轴变为小于数据点的大小，则可以使用此属性来设置是否显示数据标签。 该属性只适用于二维图表。
+      指定当值大于数值轴上的最大值时是否显示数据标签。 如果数值轴变为小于数据点的大小，则可以使用此属性来设置是否显示数据标签。 该属性只适用于二维图表。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showDataLabelsOverMaximum
@@ -303,7 +303,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartData#style:member'
     summary: |-
-      返回或设置图表的图表样式。 读/写。
+      指定图表的图表样式。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: style
@@ -318,7 +318,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartData#title:member'
     summary: |-
-      表示指定图表的标题，包括标题的文本、可见性、位置和格式。 只读。
+      指定指定图表的标题，包括文本、可见性、位置和标题的格式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: title
@@ -333,7 +333,7 @@ items:
           - 'excel!Excel.Interfaces.ChartTitleData:interface'
   - uid: 'excel!Excel.Interfaces.ChartData#top:member'
     summary: |-
-      表示从对象左边界至第 1 行顶部（在工作表上）或图表区域顶部（在图表上）的距离，以磅值表示。
+      指定从对象的上边缘到工作表上的第1行顶部或图表上的图表区顶部的距离（以磅为单位）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
@@ -348,7 +348,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartData#width:member'
     summary: |-
-      表示 chart 对象的宽度，以磅值表示。
+      指定 chart 对象的宽度（以磅为单位）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
