--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartlegenddata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartlegenddata.yml
@@ -21,7 +21,7 @@ items:
       - 'excel!Excel.Interfaces.ChartLegendData#width:member'
   - uid: 'excel!Excel.Interfaces.ChartLegendData#format:member'
     summary: |-
-      表示图表图例的格式，包括填充和字体格式。 只读。
+      表示图表图例的格式，包括填充和字体格式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -36,7 +36,7 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ChartLegendData#height:member'
     summary: |-
-      表示图表上的图例的高度（以磅为单位）。 如果图例不可见，则为 Null。
+      指定图表上的图例的高度（以磅为单位）。 如果图例不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -51,7 +51,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartLegendData#left:member'
     summary: |-
-      代表图表图例的左侧（以磅为单位）。 如果图例不可见，则为 Null。
+      指定图表上的图例的左（以磅为单位）。 如果图例不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
@@ -66,7 +66,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartLegendData#legendEntries:member'
     summary: |-
-      表示图例中 legendEntries 的集合。 只读。
+      表示图例中 legendEntries 的集合。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: legendEntries
@@ -81,7 +81,7 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendData#legendEntries~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartLegendData#overlay:member'
     summary: |-
-      表示图表图例是否应该与图表的主体重叠的布尔值。
+      指定图表图例是否应与图表的主体重叠。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overlay
@@ -96,7 +96,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendData#position:member'
     summary: |-
-      表示图例在图表上的位置。 有关详细信息，请参阅 ChartLegendPosition。
+      指定图例在图表上的位置。 有关详细信息，请参阅 ChartLegendPosition。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
@@ -111,7 +111,7 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendData#position~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartLegendData#showShadow:member'
     summary: |-
-      表示图例在图表上是否有阴影。
+      指定图例在图表上是否有阴影。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showShadow
@@ -126,7 +126,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendData#top:member'
     summary: |-
-      表示图表图例顶部。
+      指定图表图例的顶端。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
@@ -141,7 +141,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartLegendData#visible:member'
     summary: |-
-      表示 ChartLegend 对象是否可见的布尔值。
+      指定 ChartLegend 是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
@@ -156,7 +156,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendData#width:member'
     summary: |-
-      表示图表上的图例的宽度（以磅为单位）。 如果图例不可见，则为 Null。
+      指定图表上的图例的宽度（以磅为单位）。 如果图例不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
