--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartpivotoptionsdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartpivotoptionsdata.yml
@@ -15,7 +15,7 @@ items:
       - 'excel!Excel.Interfaces.ChartPivotOptionsData#showValueFieldButtons:member'
   - uid: 'excel!Excel.Interfaces.ChartPivotOptionsData#showAxisFieldButtons:member'
     summary: |-
-      指定是否在数据透视图上显示轴字段按钮。 ShowAxisFieldButtons 属性对应于“分析”选项卡（在选择数据透视图时可用）的“字段按钮”下拉列表中的“显示坐标轴字段按钮”命令。
+      指定是否在数据透视图中显示轴字段按钮。 ShowAxisFieldButtons 属性对应于“分析”选项卡（在选择数据透视图时可用）的“字段按钮”下拉列表中的“显示坐标轴字段按钮”命令。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showAxisFieldButtons
