--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangeloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangeloadoptions.yml
@@ -53,7 +53,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#address:member'
     summary: |-
-      表示 A1 样式的区域引用。 Address 值将包含工作表引用（例如，"Sheet1！A1： B4 "）。 只读。
+      指定 A1 样式中的区域引用。 Address 值将包含工作表引用（例如，"Sheet1！A1： B4 "）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: address
@@ -68,7 +68,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#addressLocal:member'
     summary: |-
-      以用户语言表示对指定区域的区域引用。 只读。
+      以用户语言指定区域的区域引用。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: addressLocal
@@ -83,7 +83,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#cellCount:member'
     summary: |-
-      范围中的单元格数。 如果单元格数超过 2^31-1 (2,147,483,647)，此 API 返回 -1。 只读。
+      指定区域中的单元格的数目。 如果单元格数超过 2^31-1 (2,147,483,647)，此 API 返回 -1。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: cellCount
@@ -98,7 +98,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#columnCount:member'
     summary: |-
-      表示区域中的列总数。 只读。
+      指定区域中的总列数。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnCount
@@ -128,7 +128,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#columnIndex:member'
     summary: |-
-      表示区域中第一个单元格的列编号。 从零开始编制索引。 只读。
+      指定区域中的第一个单元格的列号。 从零开始编制索引。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnIndex
@@ -218,7 +218,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#hidden:member'
     summary: |-
-      表示当前区域中的所有单元格是否隐藏。 只读。
+      表示当前区域中的所有单元格是否隐藏。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: hidden
@@ -248,7 +248,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#isEntireColumn:member'
     summary: |-
-      表示当前区域是否为整列。 只读。
+      表示当前区域是否为整列。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isEntireColumn
@@ -263,7 +263,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#isEntireRow:member'
     summary: |-
-      表示当前区域是否为整行。 只读。
+      表示当前区域是否为整行。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isEntireRow
@@ -278,7 +278,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#linkedDataTypeState:member'
     summary: |-
-      表示每个单元格的数据类型状态。 只读。
+      表示每个单元格的数据类型状态。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: linkedDataTypeState
@@ -323,7 +323,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#rowCount:member'
     summary: |-
-      返回区域中的总行数。 只读。
+      返回区域中的总行数。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowCount
@@ -353,7 +353,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#rowIndex:member'
     summary: |-
-      返回区域中第一个单元格的行编号。 从零开始编制索引。 只读。
+      返回区域中第一个单元格的行编号。 从零开始编制索引。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowIndex
@@ -383,7 +383,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#text:member'
     summary: |-
-      指定区域的文本值。 文本值与单元格宽度无关。 Excel \# UI 中发生的符号替换不会影响 API 返回的文本值。 只读。
+      指定区域的文本值。 文本值与单元格宽度无关。 Excel \# UI 中发生的符号替换不会影响 API 返回的文本值。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
@@ -413,7 +413,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#valueTypes:member'
     summary: |-
-      表示每个单元格的数据类型。 只读。
+      指定每个单元格中的数据类型。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: valueTypes
