--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.line.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.line.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.Line#beginArrowheadLength:member'
@@ -87,7 +87,7 @@ items:
           - 'excel!Excel.Line#beginArrowheadWidth~0:complex'
   - uid: 'excel!Excel.Line#beginConnectedShape:member'
     summary: |-
-      表示指定线条始端所附加到的形状。 只读。
+      表示指定线条始端所附加到的形状。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: beginConnectedShape
@@ -102,7 +102,7 @@ items:
           - 'excel!Excel.Shape:class'
   - uid: 'excel!Excel.Line#beginConnectedSite:member'
     summary: |-
-      表示连接线始端所连接的连接站点。 只读。 当线条的始端没有附加到任何形状时，返回 null。
+      表示连接线始端所连接的连接站点。 当线条的始端没有附加到任何形状时，返回 null。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: beginConnectedSite
@@ -327,7 +327,7 @@ items:
           - 'excel!Excel.Line#endArrowheadWidth~0:complex'
   - uid: 'excel!Excel.Line#endConnectedShape:member'
     summary: |-
-      表示指定线条末端所附加到的形状。 只读。
+      表示指定线条末端所附加到的形状。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: endConnectedShape
@@ -342,7 +342,7 @@ items:
           - 'excel!Excel.Shape:class'
   - uid: 'excel!Excel.Line#endConnectedSite:member'
     summary: |-
-      表示连接线末端所连接的连接站点。 只读。 当线条的末端没有附加到任何形状时，返回 null。
+      表示连接线末端所连接的连接站点。 当线条的末端没有附加到任何形状时，返回 null。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: endConnectedSite
@@ -357,7 +357,7 @@ items:
           - number
   - uid: 'excel!Excel.Line#id:member'
     summary: |-
-      表示形状标识符。 只读。
+      指定形状标识符。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -372,7 +372,7 @@ items:
           - string
   - uid: 'excel!Excel.Line#isBeginConnected:member'
     summary: |-
-      指定指定线条的始端是否连接到形状。 只读。
+      指定是否将指定线条的起点连接到形状。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isBeginConnected
@@ -387,7 +387,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Line#isEndConnected:member'
     summary: |-
-      指定指定线条的末端是否连接到形状。 只读。
+      指定是否将指定线条的终点连接到形状。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isEndConnected
@@ -487,7 +487,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.Line#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -508,7 +508,7 @@ items:
             - 'excel!Excel.Line:class'
   - uid: 'excel!Excel.Line#shape:member'
     summary: |-
-      返回与线条关联的形状对象。 只读。
+      返回与线条关联的形状对象。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: shape
@@ -535,7 +535,7 @@ items:
           - 'excel!Excel.Interfaces.LineData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.Line#beginArrowheadLength~0:complex'
     name: Excel.ArrowheadLength | "Short" | "Medium" | "Long"
@@ -610,7 +610,7 @@ references:
     name: Excel.Interfaces.LineLoadOptions
   - uid: 'excel!Excel.Interfaces.LineUpdateData:interface'
     name: Interfaces.LineUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.LineData:interface'
     name: Excel.Interfaces.LineData
