--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.pivotaxis.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.pivotaxis.yml
@@ -2,7 +2,7 @@
 items:
   - uid: 'excel!Excel.PivotAxis:enum'
     summary: |-
-      数据透视字段的 ShowAs 计算函数。
+      表示要从其获取 PivotItems 的轴。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.PivotAxis
